// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`collate.windows.win1252.sql > line 18 1`] = `
[
  "CREATE SCHEMA collate_tests",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "schemaname": "collate_tests",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.windows.win1252.sql > line 34 1`] = `
[
  "CREATE TABLE collate_test_fail (
    a int,
    b text COLLATE "foo"
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test_fail",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 37,
                  "typeName": {
                    "location": 39,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "collClause": {
                    "collname": [
                      {
                        "String": {
                          "sval": "foo",
                        },
                      },
                    ],
                    "location": 55,
                  },
                  "colname": "b",
                  "is_local": true,
                  "location": 48,
                  "typeName": {
                    "location": 50,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.windows.win1252.sql > line 39 1`] = `
[
  "CREATE TABLE collate_test_fail (
    a int COLLATE "en_US",
    b text
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test_fail",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "collClause": {
                    "collname": [
                      {
                        "String": {
                          "sval": "en_US",
                        },
                      },
                    ],
                    "location": 43,
                  },
                  "colname": "a",
                  "is_local": true,
                  "location": 37,
                  "typeName": {
                    "location": 39,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 64,
                  "typeName": {
                    "location": 66,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.windows.win1252.sql > line 44 1`] = `
[
  "CREATE TABLE collate_test_like (
    LIKE collate_test1
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test_like",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "TableLikeClause": {
                  "relation": {
                    "inh": true,
                    "location": 42,
                    "relname": "collate_test1",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.windows.win1252.sql > line 55 1`] = `
[
  "CREATE TABLE collate_test3 (
    a int,
    b text COLLATE "C"
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test3",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "location": 35,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "collClause": {
                    "collname": [
                      {
                        "String": {
                          "sval": "C",
                        },
                      },
                    ],
                    "location": 51,
                  },
                  "colname": "b",
                  "is_local": true,
                  "location": 44,
                  "typeName": {
                    "location": 46,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.windows.win1252.sql > line 60 1`] = `
[
  "INSERT INTO collate_test1 VALUES (1, 'abc'), (2, '�bc'), (3, 'bbc'), (4, 'ABC');
",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "collate_test1",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 34,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 37,
                            "sval": {
                              "sval": "abc",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 46,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 49,
                            "sval": {
                              "sval": "�bc",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 3,
                            },
                            "location": 60,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 63,
                            "sval": {
                              "sval": "bbc",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 4,
                            },
                            "location": 72,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 75,
                            "sval": {
                              "sval": "ABC",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
        "stmt_len": 81,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.windows.win1252.sql > line 64 1`] = `
[
  "SELECT * FROM collate_test1 WHERE b >= 'bbc';
",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 36,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 39,
                    "sval": {
                      "sval": "bbc",
                    },
                  },
                },
              },
            },
          },
        },
        "stmt_len": 44,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.windows.win1252.sql > line 69 1`] = `
[
  "SELECT * FROM collate_test1 WHERE b COLLATE "C" >= 'bbc';
",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "CollateClause": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "b",
                            },
                          },
                        ],
                        "location": 34,
                      },
                    },
                    "collname": [
                      {
                        "String": {
                          "sval": "C",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "location": 48,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 51,
                    "sval": {
                      "sval": "bbc",
                    },
                  },
                },
              },
            },
          },
        },
        "stmt_len": 56,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.windows.win1252.sql > line 84 1`] = `
[
  "CREATE TABLE collate_test5 (
    a int,
    b testdomain_sv COLLATE "en_US"
);
",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test5",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "location": 35,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "collClause": {
                    "collname": [
                      {
                        "String": {
                          "sval": "en_US",
                        },
                      },
                    ],
                    "location": 60,
                  },
                  "colname": "b",
                  "is_local": true,
                  "location": 44,
                  "typeName": {
                    "location": 46,
                    "names": [
                      {
                        "String": {
                          "sval": "testdomain_sv",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 77,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.windows.win1252.sql > line 96 1`] = `
[
  "SELECT a, b FROM collate_test1 ORDER BY b COLLATE "C";
",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "CollateClause": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "b",
                              },
                            },
                          ],
                          "location": 40,
                        },
                      },
                      "collname": [
                        {
                          "String": {
                            "sval": "C",
                          },
                        },
                      ],
                      "location": 42,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 53,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.windows.win1252.sql > line 99 1`] = `
[
  "SELECT * FROM collate_test1 ORDER BY b;
",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 37,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 38,
      },
    ],
    "version": 160001,
  },
]
`;
